syntax = "proto3";
package transaction_history_integration;
import "google/protobuf/empty.proto";

enum TransactionType{
    Deposit = 0;
    Withdrawal = 1;
    BalanceCorrection = 2;
    Trading = 3;
}

message TransactionGrpcModel{
    string Id = 1;
    string TraderId = 2;
    string AccountId = 3;
    transaction_history_integration.TransactionType TransactionType = 4;
    optional string ProcessId = 5;
    double BalanceDelta = 6;
    uint64 Date = 7;
    optional string ReferenceTransactionId = 8;
    double BalanceAfterOperation = 9;
}

message GetTransactionHistoryGrpc{
    string TraderId = 1;
    string AccountId = 2;
    optional uint64 DateFromUnixMs = 3;
    optional uint64 DateToUnixMs = 4;
}

message PingResponse{
    string ServiceName = 1;
    uint64 DateTime = 2;
  }

service TransactionHistoryIntegrationGrpcService {
    rpc GetTransactionHistory(transaction_history_integration.GetTransactionHistoryGrpc) returns (stream transaction_history_integration.TransactionGrpcModel);
    rpc Ping(google.protobuf.Empty) returns(transaction_history_integration.PingResponse);
}